# traffic-simulation-system

./: README.md
build_scripts/: CMakeLists.txt  setup.py
cpp/binding/: traffic_module.cpp
cpp/include/controllers/: SimulationController.h
cpp/include/models/: Road.h  TrafficLight.h  Vehicle.h  intersection.h
cpp/include/utils/: ConfigParser.h  Logger.h  UUID.h
cpp/src/controllers/: SimulationController.cpp
cpp/src/models/: Intersection.cpp  TrafficLight.cpp  Vehicle.cpp
data/config/: default_config.json
data/maps/: sample_grid.json
examples/: basic_simulator.py
python/: main.py  simulator.py
python/analysis/: traffic_analyzer.py
tests/cpp_tests/: test_vehicle.cpp
